<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/payment_content_description"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingEnd="8dp"
    android:paddingRight="8dp"
    tools:context=".view.PaymentActivity">


    <TextView
        android:id="@+id/payment_form_title"
        style="@style/Header.Light"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/card_input_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_form_title" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pay_with_this_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_input_widget" />


</android.support.constraint.ConstraintLayout>